# MyProjects

Desktop/School_Project_Website/: Canvas1.html  Canvas2.html  ClientTCP.py  ClientUDP.py  GoogleMapsApi.html  Hanoi1.py  README.md  ServerTCP.py  account.php  book.cpp  book_main.cpp  calendar.php  complex.h  config.php  db_nserickson.sql  dbutils.php  deleteorgs.php  download.php  editpage.php  getuid.php  home.php  index.php  input.php  insertpage.php  lists.py  login.php  logout.php  portfolio.php  sDES.py  styles.css
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/: CS3210_erickson.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/.kdev4/: CS3210_erickson.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/CS3210_HOMEWORK_TEMPLATES/: README.md
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW00/: CMakeLists.txt  HW00 Questions  HW00.kdev4  main.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW01/: CMakeLists.txt  HW01.cpp  HW01.h  HW01.kdev4  main.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW03/: CMakeLists.txt  HW03.kdev4  complex.cpp  fractal  makefile  rgb.h
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW03/.kdev4/: HW03.kdev4  _custom.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW04/: CMakeLists.txt  HW04.kdev4  book.h  loadfile.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW04/.kdev4/: HW04.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/HW05/: CMakeLists.txt  HW05_07.cpp  HW05_13.cpp  HW05_14.cpp  nicholas-erickson-HW05.txt
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_10/: CMakeLists.txt  Chapter_10.kdev4  stack.cpp  stack.h  stacker.cpp  stock20.cpp  stock20.h  stocks.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_10/.kdev4/: Chapter_10.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_11/: CMakeLists.txt  Chapter_11.kdev4  stone1.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_11/.kdev4/: Chapter_11.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_12/: CMakeLists.txt  Chapter_12.kdev4  strngbad.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_12/.kdev4/: Chapter_12.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_13/: CMakeLists.txt  Chapter_13.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_13/.kdev4/: Chapter_13.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_14/: CMakeLists.txt  Chapter_14.kdev4  stacktp.h
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_14/.kdev4/: Chapter_14.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_15/: CMakeLists.txt  Chapter_15.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Chapter_15/.kdev4/: Chapter_15.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Classes_02/: CMakeLists.txt  Classes_02.kdev4  Patient.h  Virus.h  main.cpp  vector.cpp  vector.h
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Classes_02/.kdev4/: Classes_02.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Classes_02/Lec04/: CMakeLists.txt  Virus.h
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Classes_02/Lec05/: Lec05.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Classes_02/Lec05/.kdev4/: Lec05.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Lec05/: CMakeLists.txt
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/MidTermReview/: CMakeLists.txt  MidTermReview.kdev4  arrfun4.cpp  cubes.cpp  cubes.h  pointer.cpp  string1.cpp  string1.h  strngbad.cpp  use_new.cpp  vegnewsSTR_GOOD.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/MidTermReview/.kdev4/: MidTermReview.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/ReviewPlayground/: CMakeLists.txt  ReviewPlayground.kdev4  main.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/ReviewPlayground/.kdev4/: ReviewPlayground.kdev4
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/Templates/lecture18_templates/tmpl_functions/: CMakeLists.txt  Makefile  formatter.h  main  main.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/lecture16_exceptions/: CMakeLists.txt  Makefile  alerts.cpp  alerts.h  main.cpp
Documents/University Of Iowa/2016/Programming Languages and Tools/CS3210_erickson/IN_CLASS/lecture20_STL/: CMakeLists.txt  creature.cpp  creature.h  formatter.h  main.cpp  makefile
Website/: Classes.py  GoogleMapsApi2.html  ServerUDP.py  account.php  config.php  create_users.php  createsite.php  db.sh  dbutils.php  deletepage.php  deleteusers.php  edituser.php  fractal_main.cpp  fruitsAndVeggies.py  getAccType.php  home.php  index.php  list.cpp  list.h  login.php  portfolio.php  reset.php  reset_user.php  tables.sql  users_list.php  view.php
(+100 files in other folders)
