cmake_minimum_required(VERSION 2.6)
project(HW03)

set(CMAKE_CXX_STANDARD 14)                                                                                                                                               
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(HW04 main.cpp book.cpp list.cpp loadfile.cpp)

