cmake_minimum_required(VERSION 3.0)
project(Exceptions)

set(CMAKE_CXX_STANDARD 14)                                                                                                                                               
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(main main.cpp alerts.cpp)
