cmake_minimum_required(VERSION 3.0)
project(L20_STL)

set(CMAKE_CXX_STANDARD 14)                                                                                                                                               
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(main main.cpp creature.cpp)
