cmake_minimum_required(VERSION 3.0)
project(<project name>)

set(CMAKE_CXX_STANDARD 14)                                                                                                                                               
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(<program name>  <files to compile for program name>)
